# Alzachat

./: .gitignore  Alzachat.conf  CMakeLists.txt  README.md  main.cpp
src/client/: AlzaClient.cpp  AlzaClient.h  AlzaRunnable.cpp  ClientMessage.cpp  ClientMessage.h  ClientRunnable.cpp  ClientUser.cpp  ClientUser.h  clientRunnable.cpp  main.cpp
src/lib/: AlzaRunnable.h  Alzachat.h  ImageMessage.cpp  ImageMessage.h  InternalMessage.h  Logging.cpp  Logging.h  MediaMessage.cpp  MediaMessage.h  Message.cpp  Message.h  ServerRunnable.h  TextMessage.cpp  TextMessage.h  User.cpp  User.h  VideoMessage.cpp  VideoMessage.h  VoiceMessage.cpp  VoiceMessage.h  serverRunnable.h
src/server/: AlzaRunnable.cpp  AlzaRunnable.h  AlzaServer.cpp  AlzaServer.h  SMS.cpp  SMS.h  ServerConfig.cpp  ServerConfig.h  ServerMessage.cpp  ServerMessage.h  ServerRunnable.cpp  SysConfig.h  User.cpp  main.cpp  serverRunnable.cpp
